<resources>
    <string name="app_name">Farmx_b</string>
    <string name="stripe_publishable_key" translatable="false">pk_test_51JklW4SD1yUAHEx9AXNBv2WjH0aHzo6tcrcPaXXv0ijaFyFk2SF1P6l9CPVLiOIbe1AI90RHjh9uJKHnZYtfXjTM00fX1oaAug</string>
    <string name="stripe_secret_key" translatable="false">sk_test_51JklW4SD1yUAHEx9507PSCXJWAefxfzsWZliTy3MadBpRK8t0sBglVKyjMkEocQ3wlZ0gzhDln87VDeGB7Wtlzzu00qftNetJ9</string>
    <string name="termsservice" translatable="false"><u>Terms of Service</u></string>
    <string name="termscondition" translatable="false"> Terms &amp; Conditions </string>
    <string name="privacy" translatable="false"><u>Privacy Policy</u></string>
    <string name="basicinfo">Basic info</string>
    <string name="registerland">Register New Land</string>
    <string name="mucultivationland">My Cultivation Land</string>
    <string name="members">Members</string>
    <string name="mycrops">My Crops</string>
    <string name="mymasters">My Land Masters</string>
    <string name="master">Select Masters</string>
    <string name="mynodes">My Land Nodes</string>
    <string name="addfield">Add Land</string>
    <string name="update">Update</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="relation">Relation</string>
    <string name="payment">Payment</string>
    <string name="billingtype">Billing Type</string>
    <string name="breed">Breeder Type</string>
    <string name="name">Name</string>
    <string name="count">Count</string>
    <string name="addmember">Add Member</string>
    <string name="addmembers">Add New Member</string>
    <string name="basic_info">Basic information</string>
    <string name="Cultivation">Cultivation</string>
    <string name="inter_crops">Inter Crops</string>
    <string name="empty">No Data</string>
    <string name="pha">Post Harvest Activity</string>
    <string name="warehouse">Warehouse</string>
    <string name="no_data">Data will be updated soon</string>
    <string name="no_data_available">No Data Available</string>
    <string name="noupdate">We will update this option soon</string>
    <string name="postCultivation">Post cultivation</string>
    <string name="favcondition">Fav condition </string>
    <string name="favorable_condition">Favorable conditions of </string>
    <string name="nutrientdeficiency">Nutrient deficiency</string>
    <string name="taxonomy">Taxonomy</string>
    <string name="selectdate">Select date</string>
    <string name="selectmem">Select Member</string>
    <string name="selectpayment">Select Payment type</string>
    <string name="Nutrirional_Values_of">Nutrient values of </string>
    <string name="varietiesof">Varieties of </string>
    <string name="AGRIPEDIA">Agripedia</string>
    <string name="my_crops">My crops</string>
    <string name="chats">Chats</string>
    <string name="helpline">Helpline</string>
    <string name="forum">Community</string>
    <string name="mnews">Market news</string>
    <string name="buysell">Buy \u0026 sell</string>
    <string name="history">History</string>
    <string name="scheme">Scheme</string>
    <string name="addanimal">Add New Animal</string>
    <string name="addanim">Add Animal</string>
    <string name="myanimaldetail">My Animal Details</string>
    <string name="fieldlisting">Field Listing</string>
    <string name="upgrade">For unlimited access upgrade to premium</string>
    <string name="addnewanimalsdetails">Add New Animal Details</string>
    <string name="myanimals">My Animal Details</string>
    <string name="soiltype">Soil Type</string>
    <string name="Unit">Unit*</string>
    <string name="select_crop">Select Crops</string>
    <string name="crop_lifecycle">Crop Lifecycle</string>
    <string name="power_source">Power Source</string>
    <string name="Water_source">Water Source</string>
    <string name="govt_schemes">Govt schemes</string>
    <string name="no">No</string>
    <string name="Submit">Submit</string>
    <string name="type">Type</string>
    <string name="pestdisease">Pest and Disease</string>
    <string name="actual">Actual</string>
    <string name="seedquality">Seed Quality</string>
    <string name="fireprotection">Fire protection</string>
    <string name="warehouseinsured">Warehouse insured ?</string>
    <string name="processing_industry">Processing Industry</string>
    <string name="gvtnearwarehouse">Warehouse Near to You</string>
    <string name="gvtnearwarehouselocation">Warehouse Location</string>
    <string name="local_market">Local Market</string>
    <string name="healthcard">Soil health card</string>
    <string name="livestocks">Do you have cattles ?</string>
    <string name="soilhealthcard">Do you have Soil report ?</string>
    <string name="organicfarming">Doing organic farming ?</string>
    <string name="organicfarmer">Interested in organic farming ?</string>
    <string name="exportinterest">Interested in exports ?</string>
    <string name="applyscheme">Apply scheme</string>
    <string name="applycof">Apply for Certificate</string>
    <string name="yearscheme">Scheme years</string>
    <string name="certifiedfarmer">Certified organic farmer</string>
    <string name="Water_type">Water Type</string>
    <string name="pincode">Pincode</string>
    <string name="panchayat_office">Panchayat Office</string>
    <string name="Current_location">Land Location</string>
    <string name="Select_resources">Select Resources</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="default_notification_channel_id">alarm_channel_id_01</string>
    <string name="varieties">Varieties</string>
    <string name="Identificatoion"> Identification </string>
    <string name="Control_Measures">Control measures</string>
    <string name="nutrientValues">Nutrient values </string>
    <string name="commonname">Common name</string>
    <string name="editland">Edit Land Details</string>
    <string name="editmember">Update Member</string>
    <string name="details">Details</string>
    <string name="doreplicate">Replicate</string>
    <string name="total">total</string>
    <string name="editcrop">Update A Crop</string>
    <string name="editanimal">Update Animal Details</string>
    <string name="post">Add a Post</string>
    <string name="forum_title">Your Title</string>
    <string name="product_cost">Cost</string>
    <string name="category">Category</string>
    <string name="attachment">attach Image</string>
    <string name="enter_your_disc">Enter Your description</string>
    <string name="your_disc">Your description</string>
    <string name="forum_title_here">Your Title goes here</string>
    <string name="landname">Land Name: </string>
    <string name="landid">Land id</string>
    <string name="landdime">Dimension*</string>
    <string name="selectcrop">Search Crop</string>
    <string name="selectintercrop">Search Intercrop</string>
    <string name="govtschemes">Any Schemes used ?</string>
    <string name="ownership">Land Ownership </string>
    <string name="selectunit">Select Unit</string>
    <string name="select">Select</string>
    <string name="selectanimal">Select Animal*</string>
    <string name="noofanimal">No of Animal</string>
    <string name="nearestvetnery">Nearest veterinary Hospital</string>
    <string name="selectanimalerror">Select Animal*</string>
    <string name="selectland">Select Land</string>
    <string name="selectmember">Select Member</string>
    <string name="membername">Member Name*</string>
    <string name="expense_title">Expense title</string>
    <string name="expense_type">Expense type</string>
    <string name="Add_member">Add Member</string>
    <string name="payment_date">Dated</string>
    <string name="ploughed">ploughing </string>
    <string name="total_amount">Total amount</string>
    <string name="date_activity">Start date</string>
    <string name="enddate_activity">End date</string>
    <string name="Ploughing">Ploughing</string>
    <string name="sowing">Sowing</string>
    <string name="expandable_total_revenue">Expenditure and Total Revenue</string>
    <string name="cost_activity">Cost</string>
    <string name="my_finance">My Finance</string>
    <string name="pest_control">Identification of Infected Crop</string>
    <string name="my_cattle">My Cattle</string>
    <string name="nextpayment_date">Next payment date</string>
    <string name="updateexpenses">update Expense</string>
    <string name="myactivity">My activity</string>
    <string name="ongoingactivity">Ongoing activity</string>
    <string name="completed">Completed</string>
    <string name="Completed">Completed activity</string>
    <string name="farmingexp">Farming Experience</string>
    <string name="plougheddate">Seed ploughed date</string>
    <string name="wateravailability">Water facility availability</string>
    <string name="Pre_diseased">Pre Diseased ?</string>
    <string name="scientificname">Scientific name</string>
    <string name="family">Family</string>
    <string name="Cultivation_Season"> Season of cultivation </string>
    <string name="Climate_and_soli_condition">Climate and soil </string>
    <string name="Seed_Method_Rate">Seed rate </string>
    <string name="Seed_treatment">Seed treatment </string>
    <string name="Nursery_Details">Nursery details</string>
    <string name="Nutritional_Deficiency">Nutrient deficiency of  </string>
    <string name="Symptoms"> Symptoms </string>
    <string name="pests_Symptoms"> Symptoms for </string>
    <string name="phd_Symptoms">Symptoms for </string>
    <string name="diseas_Symptoms">Symptoms for </string>
    <string name="Control_Measure">Control measure for </string>
    <string name="pests_Identify">Identification for </string>
    <string name="phd_Identify">Identification for </string>
    <string name="Disease_Identify">Identification for </string>
    <string name="Videos" translatable="false">Video</string>
    <string name="Identified_Stages">Identified stages</string>
    <string name="Plant_Spacing_Information">Plant spacing </string>
    <string name="Field_Preparation">Field preparation</string>
    <string name="Cutivate_Fertilizer_Manure">Manure and fertiliser</string>
    <string name="PGR_Information">Plant growth regulator </string>
    <string name="Irrigation_Information">Irrigation </string>
    <string name="description">Description</string>
    <string name="language">Select language</string>
    <string name="state">Select place</string>
    <string name="searchcrop">Search for the crop</string>
    <string name="usebar">Use the search bar on the top</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="invalid_name" translatable="false"> Invalid name </string>
    <string name="invalid_email" translatable="false"> Invalid email Address </string>
    <string name="Info">Info</string>
    <string name="land">Land</string>
    <string name="rearing">Rearing</string>
    <string name="activity">Activity</string>
    <string name="Pests">Pest</string>
    <string name="Diseases">Diseases</string>
    <string name="logout">Logout</string>
    <string name="PHD">PHD</string>
    <string name="yes">Yes</string>
    <string name="profile">Profile</string>
    <string name="notification">Notification</string>
    <string name="setting">Setting</string>
    <string name="utility">Utility</string>
    <string name="save">Save</string>
    <string name="login_expired_contact_admin">Login expired Contact Admin</string>
    <string name="contact_admin">Contact admin</string>
    <string name="or_contact_us_on">or Contact us on 9898989898</string>
    <string name="refresh">Refresh</string>
    <string name="upload_image">Upload image</string>
    <string name="do_you_want_to_remove">Do you want to remove</string>
</resources>