<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".Activitys.Expired_Page">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/login_expired_contact_admin"
        android:textSize="17sp"
        android:fontFamily="@font/poppins_semibold" />

    <com.skydoves.elasticviews.ElasticButton
        android:id="@+id/contact"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_curved"
        android:textColor="@color/white"
        android:text="@string/contact_admin"
        android:textAllCaps="false" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/or_contact_us_on"
        android:textSize="18sp" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:visibility="gone"
        android:id="@+id/refresh"
        android:gravity="center"
        android:textColor="@color/green_farmx"
        android:text="@string/refresh"
        android:textSize="20sp" />

</LinearLayout>