<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:textSize="20sp"
        android:textColor="@color/mat_black"
        android:text="@string/do_you_want_to_remove"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/yesBtn"
        android:text="@string/yes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintTop_toBottomOf="@id/name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/noBtn"
        android:backgroundTint="@color/green_farmx"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/noBtn"
        android:text="@string/no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="5dp"
        app:layout_constraintTop_toTopOf="@id/yesBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/yesBtn"
        android:backgroundTint="@color/green_farmx"
        android:textColor="@color/white"
        app:cornerRadius="20dp"
        style="@style/Widget.MaterialComponents.Button.UnelevatedButton"/>

</androidx.constraintlayout.widget.ConstraintLayout>